--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                   <input type="radio" name="rating-1" class="border-4 border-solid border-rating-color mask mask-star-2 bg-rating-color" />
                 </div>
                 <h6 class="text-xl font-semibold text-center text-gray-900 py-2">K. Accessories</h6>
-                <p class="text-xl font-normal text-center text-secondery-color">39.00 TK</p>
+                <p class="text-xl font-normal text-center text-secondery-color"><span id="quantity1">39.00</span> TK</p>
               </div>
               <div id="prod2" class="bg-white p-5 pb-10 rounded-lg">
                 <div class="bg-secondery-bg mb-5 rounded-lg h-3/5 grid content-center justify-center">
@@ -78,7 +78,7 @@
                   <input type="radio" name="rating-2" class="border-4 border-solid border-rating-color mask mask-star-2 bg-rating-color" />
                 </div>
                 <h6 class="text-xl font-semibold text-center text-gray-900 py-2">K. Accessories</h6>
-                <p class="text-xl font-normal text-center text-secondery-color">25.00 TK</p>
+                <p class="text-xl font-normal text-center text-secondery-color"><span id="quantity2">25.00</span> TK</p>
               </div>
               <div id="prod3" class="bg-white p-5 pb-10 rounded-lg">
                 <div class="bg-secondery-bg mb-5 rounded-lg h-3/5 grid content-center justify-center">
@@ -92,7 +92,7 @@
                   <input type="radio" name="rating-3" class="border-4 border-solid border-rating-color mask mask-star-2 bg-rating-color" />
                 </div>
                 <h6 class="text-xl font-semibold text-center text-gray-900 py-2">Furniture</h6>
-                <p class="text-xl font-normal text-center text-secondery-color">49.00 TK</p>
+                <p class="text-xl font-normal text-center text-secondery-color"><span id="quantity3">49.00</span> TK</p>
               </div>
             </div>
           </div>
@@ -111,7 +111,7 @@
                   <input type="radio" name="rating-4" class="border-4 border-solid border-rating-color mask mask-star-2 bg-rating-color" />
                 </div>
                 <h6 class="text-xl font-semibold text-center text-gray-900 py-2">Sports Back Cap</h6>
-                <p class="text-xl font-normal text-center text-secondery-color">49.00 TK</p>
+                <p class="text-xl font-normal text-center text-secondery-color"><span id="quantity4">49.00</span> TK</p>
               </div>
               <div id="prod5" class="bg-white p-5 pb-10 rounded-lg">
                 <div class="bg-secondery-bg mb-5 rounded-lg h-3/5 grid content-center justify-center">
@@ -125,7 +125,7 @@
                   <input type="radio" name="rating-5" class="border-4 border-solid border-rating-color mask mask-star-2 bg-rating-color" />
                 </div>
                 <h6 class="text-xl font-semibold text-center text-gray-900 py-2">Full Jersey Set</h6>
-                <p class="text-xl font-normal text-center text-secondery-color">69.00 TK</p>
+                <p class="text-xl font-normal text-center text-secondery-color"><span id="quantity5">69.00</span> TK</p>
               </div>
               <div id="prod6" class="bg-white p-5 pb-10 rounded-lg">
                 <div class="bg-secondery-bg mb-5 rounded-lg h-3/5 grid content-center justify-center">
@@ -139,7 +139,7 @@
                   <input type="radio" name="rating-6" class="border-4 border-solid border-rating-color mask mask-star-2 bg-rating-color" />
                 </div>
                 <h6 class="text-xl font-semibold text-center text-gray-900 py-2">Sports cates</h6>
-                <p class="text-xl font-normal text-center text-secondery-color">159.00 TK</p>
+                <p class="text-xl font-normal text-center text-secondery-color"><span id="quantity6">159.00</span> TK</p>
               </div>
             </div>
           </div>
@@ -158,7 +158,7 @@
                   <input type="radio" name="rating-7" class="border-4 border-solid border-rating-color mask mask-star-2 bg-rating-color" />
                 </div>
                 <h6 class="text-xl font-semibold text-center text-gray-900 py-2">Sports Back Cap</h6>
-                <p class="text-xl font-normal text-center text-secondery-color">185.00 TK</p>
+                <p class="text-xl font-normal text-center text-secondery-color"><span id="quantity7">185.00</span> TK</p>
               </div>
               <div id="prod8" class="bg-white p-5 pb-10 rounded-lg">
                 <div class="bg-secondery-bg mb-5 rounded-lg h-3/5 grid content-center justify-center">
@@ -172,7 +172,7 @@
                   <input type="radio" name="rating-8" class="border-4 border-solid border-rating-color mask mask-star-2 bg-rating-color" checked />
                 </div>
                 <h6 class="text-xl font-semibold text-center text-gray-900 py-2">Children play</h6>
-                <p class="text-xl font-normal text-center text-secondery-color">299.00 TK</p>
+                <p class="text-xl font-normal text-center text-secondery-color"><span id="quantity8">299.00</span> TK</p>
               </div>
               <div id="prod9" class="bg-white p-5 pb-10 rounded-lg">
                 <div class="bg-secondery-bg mb-5 rounded-lg h-3/5 grid content-center justify-center">
@@ -186,7 +186,7 @@
                   <input type="radio" name="rating-9" class="border-4 border-solid border-rating-color mask mask-star-2 bg-rating-color" checked />
                 </div>
                 <h6 class="text-xl font-semibold text-center text-gray-900 py-2">Flexible Sofa</h6>
-                <p class="text-xl font-normal text-center text-secondery-color">339.00 TK</p>
+                <p class="text-xl font-normal text-center text-secondery-color"><span id="quantity9">339.00</span> TK</p>
               </div>
             </div>
           </div>
@@ -196,8 +196,8 @@
             <h4 class="text-xl xl:text-2xl font-medium text-gray-900 mb-4">Have coupon?</h4>
             <div class="form-control w-full">
               <label class="input-group h-16 w-full">
-                <input id="remove-outline" type="text" placeholder="Coupon code" class="input input-bordered h-3/4 md:min-h-full px-2 lg:px-4 bg-transparent text-xs lg:text-base xl:text-xl font-normal text-secondery-color w-full" />
-                <button id="apply-btn" class="px-2 lg:px-4 xl:px-6 h-3/4 md:min-h-full bg-primary-color text-xs lg:text-base xl:text-xl font-medium text-white">Apply</button>
+                <input id="remove-outline" type="text" value="" placeholder="Coupon code" class="input input-bordered h-3/4 md:min-h-full px-2 lg:px-4 bg-transparent text-xs lg:text-base xl:text-xl font-normal text-secondery-color w-full" />
+                <button disabled id="apply-btn" class="px-2 lg:px-4 xl:px-6 h-3/4 md:min-h-full bg-secondery-color text-xs lg:text-base xl:text-xl font-medium text-white">Apply</button>
               </label>
             </div>
           </div>
@@ -218,7 +218,7 @@
 
             <hr class="my-6">
 
-            <button id="purchase-btn" class="px-4 py-4 bg-primary-color md:text-lg lg:text-xl font-medium text-white rounded-lg w-full">Make Purchase</button>
+            <button disabled id="purchase-btn" class="px-4 py-4 bg-secondery-color md:text-lg lg:text-xl font-medium text-white rounded-lg w-full">Make Purchase</button>
           </div>
         </aside>
       </div>
