--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                   <input type="radio" name="rating-1" class="border-4 border-solid border-rating-color mask mask-star-2 bg-rating-color" />
                   <input type="radio" name="rating-1" class="border-4 border-solid border-rating-color mask mask-star-2 bg-rating-color" />
                 </div>
-                <h6 class="text-xl font-semibold text-center text-gray-900 py-2">K. Accessories</h6>
+                <h6 id="name1" class="text-xl font-semibold text-center text-gray-900 py-2">K. Accessories</h6>
                 <p class="text-xl font-normal text-center text-secondery-color"><span id="quantity1">39.00</span> TK</p>
               </div>
               <div id="prod2" class="bg-white p-5 pb-10 rounded-lg">
@@ -77,7 +77,7 @@
                   <input type="radio" name="rating-2" class="border-4 border-solid border-rating-color mask mask-star-2 bg-rating-color" />
                   <input type="radio" name="rating-2" class="border-4 border-solid border-rating-color mask mask-star-2 bg-rating-color" />
                 </div>
-                <h6 class="text-xl font-semibold text-center text-gray-900 py-2">K. Accessories</h6>
+                <h6 id="name2" class="text-xl font-semibold text-center text-gray-900 py-2">K. Accessories</h6>
                 <p class="text-xl font-normal text-center text-secondery-color"><span id="quantity2">25.00</span> TK</p>
               </div>
               <div id="prod3" class="bg-white p-5 pb-10 rounded-lg">
@@ -91,7 +91,7 @@
                   <input type="radio" name="rating-3" class="border-4 border-solid border-rating-color mask mask-star-2 bg-rating-color" checked />
                   <input type="radio" name="rating-3" class="border-4 border-solid border-rating-color mask mask-star-2 bg-rating-color" />
                 </div>
-                <h6 class="text-xl font-semibold text-center text-gray-900 py-2">Furniture</h6>
+                <h6 id="name3" class="text-xl font-semibold text-center text-gray-900 py-2">Furniture</h6>
                 <p class="text-xl font-normal text-center text-secondery-color"><span id="quantity3">49.00</span> TK</p>
               </div>
             </div>
@@ -110,7 +110,7 @@
                   <input type="radio" name="rating-4" class="border-4 border-solid border-rating-color mask mask-star-2 bg-rating-color" />
                   <input type="radio" name="rating-4" class="border-4 border-solid border-rating-color mask mask-star-2 bg-rating-color" />
                 </div>
-                <h6 class="text-xl font-semibold text-center text-gray-900 py-2">Sports Back Cap</h6>
+                <h6 id="name4" class="text-xl font-semibold text-center text-gray-900 py-2">Sports Back Cap</h6>
                 <p class="text-xl font-normal text-center text-secondery-color"><span id="quantity4">49.00</span> TK</p>
               </div>
               <div id="prod5" class="bg-white p-5 pb-10 rounded-lg">
@@ -124,7 +124,7 @@
                   <input type="radio" name="rating-5" class="border-4 border-solid border-rating-color mask mask-star-2 bg-rating-color" checked />
                   <input type="radio" name="rating-5" class="border-4 border-solid border-rating-color mask mask-star-2 bg-rating-color" />
                 </div>
-                <h6 class="text-xl font-semibold text-center text-gray-900 py-2">Full Jersey Set</h6>
+                <h6 id="name5" class="text-xl font-semibold text-center text-gray-900 py-2">Full Jersey Set</h6>
                 <p class="text-xl font-normal text-center text-secondery-color"><span id="quantity5">69.00</span> TK</p>
               </div>
               <div id="prod6" class="bg-white p-5 pb-10 rounded-lg">
@@ -138,7 +138,7 @@
                   <input type="radio" name="rating-6" class="border-4 border-solid border-rating-color mask mask-star-2 bg-rating-color" />
                   <input type="radio" name="rating-6" class="border-4 border-solid border-rating-color mask mask-star-2 bg-rating-color" />
                 </div>
-                <h6 class="text-xl font-semibold text-center text-gray-900 py-2">Sports cates</h6>
+                <h6 id="name6" class="text-xl font-semibold text-center text-gray-900 py-2">Sports cates</h6>
                 <p class="text-xl font-normal text-center text-secondery-color"><span id="quantity6">159.00</span> TK</p>
               </div>
             </div>
@@ -157,7 +157,7 @@
                   <input type="radio" name="rating-7" class="border-4 border-solid border-rating-color mask mask-star-2 bg-rating-color" checked />
                   <input type="radio" name="rating-7" class="border-4 border-solid border-rating-color mask mask-star-2 bg-rating-color" />
                 </div>
-                <h6 class="text-xl font-semibold text-center text-gray-900 py-2">Sports Back Cap</h6>
+                <h6 id="name7" class="text-xl font-semibold text-center text-gray-900 py-2">Sports Back Cap</h6>
                 <p class="text-xl font-normal text-center text-secondery-color"><span id="quantity7">185.00</span> TK</p>
               </div>
               <div id="prod8" class="bg-white p-5 pb-10 rounded-lg">
@@ -171,7 +171,7 @@
                   <input type="radio" name="rating-8" class="border-4 border-solid border-rating-color mask mask-star-2 bg-rating-color" />
                   <input type="radio" name="rating-8" class="border-4 border-solid border-rating-color mask mask-star-2 bg-rating-color" checked />
                 </div>
-                <h6 class="text-xl font-semibold text-center text-gray-900 py-2">Children play</h6>
+                <h6 id="name8" class="text-xl font-semibold text-center text-gray-900 py-2">Children play</h6>
                 <p class="text-xl font-normal text-center text-secondery-color"><span id="quantity8">299.00</span> TK</p>
               </div>
               <div id="prod9" class="bg-white p-5 pb-10 rounded-lg">
@@ -185,7 +185,7 @@
                   <input type="radio" name="rating-9" class="border-4 border-solid border-rating-color mask mask-star-2 bg-rating-color" />
                   <input type="radio" name="rating-9" class="border-4 border-solid border-rating-color mask mask-star-2 bg-rating-color" checked />
                 </div>
-                <h6 class="text-xl font-semibold text-center text-gray-900 py-2">Flexible Sofa</h6>
+                <h6 id="name9" class="text-xl font-semibold text-center text-gray-900 py-2">Flexible Sofa</h6>
                 <p class="text-xl font-normal text-center text-secondery-color"><span id="quantity9">339.00</span> TK</p>
               </div>
             </div>
@@ -203,9 +203,7 @@
           </div>
           <div class="p-6 bg-white rounded-lg">
             <ul id="prod-list" class="md:text-xl xl:text-2xl font-medium text-gray-900 xl:leading-10 list-decimal pl-6 space-y-1.5">
-              <li>Home Cooker</li>
-              <li>Sports cates</li>
-              <li>Home Cooker</li>
+              
             </ul>
 
             <hr class="my-3">
