--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         }
     </script>
 </head>
-<body class="bg-secondery-bg pb-10">
+<body style="font-family: 'Work Sans', sans-serif;" class="bg-secondery-bg pb-10">
     <header class="bg-primary-bg py-20">
         <section class="max-w-[1440px] grid grid-cols-1 md:grid-cols-2 mx-auto">
             <div class="grid content-center">
                 <h5 class="text-3xl font-medium text-center text-gray-900">---SALE FEVER---</h5>
-                <h2 class="text-4xl xl:text-6xl font-bold text-center text-gray-900 xl:pt-11 xl:pb-16 pt-9 pb-14">Purchase TK 200 or <br> above & get <span  class="text-primary-color">20% off</span></h2>
-                <p class="text-xl lg:text-2xl font-medium text-center text-gray-900">Use Promo Code <span  class="text-white bg-primary-color rounded-lg py-3.5 px-6 ml-2.5">SELL200</span></p>
+                <h2 class="text-4xl xl:text-6xl font-bold text-center text-gray-900 xl:pt-11 xl:pb-16 pt-9 pb-14">Purchase TK 200 or <br> above & get <span class="text-primary-color">20% off</span></h2>
+                <p class="text-xl lg:text-2xl font-medium text-center text-gray-900">Use Promo Code <span title="Copy" class="text-white bg-primary-color rounded-lg py-3.5 px-6 ml-2.5">SELL200</span></p>
             </div>
             <div class="grid content-center pt-10 md:pt-0">
                 <img class="md:w-11/12 w-9/12 mx-auto" src="images/Summer 1.png" alt="banner">
@@ -52,7 +52,7 @@
         <div>
           <div>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-              <div id="prod1" class="bg-white p-5 pb-10 rounded-lg">
+              <div id="prod1" class="hover:shadow bg-white p-5 pb-10 rounded-lg cursor-pointer">
                 <div class="bg-secondery-bg mb-5 rounded-lg h-3/5 grid content-center justify-center">
                   <img class="w-9/12 mx-auto" src="images/prod1.png" alt="">
                 </div>
@@ -66,7 +66,7 @@
                 <h6 id="name1" class="text-xl font-semibold text-center text-gray-900 py-2">K. Accessories</h6>
                 <p class="text-xl font-normal text-center text-secondery-color"><span id="quantity1">39.00</span> TK</p>
               </div>
-              <div id="prod2" class="bg-white p-5 pb-10 rounded-lg">
+              <div id="prod2" class="hover:shadow bg-white p-5 pb-10 rounded-lg cursor-pointer">
                 <div class="bg-secondery-bg mb-5 rounded-lg h-3/5 grid content-center justify-center">
                   <img class="w-9/12 mx-auto" src="images/prod2.png" alt="">
                 </div>
@@ -80,7 +80,7 @@
                 <h6 id="name2" class="text-xl font-semibold text-center text-gray-900 py-2">K. Accessories</h6>
                 <p class="text-xl font-normal text-center text-secondery-color"><span id="quantity2">25.00</span> TK</p>
               </div>
-              <div id="prod3" class="bg-white p-5 pb-10 rounded-lg">
+              <div id="prod3" class="hover:shadow bg-white p-5 pb-10 rounded-lg cursor-pointer">
                 <div class="bg-secondery-bg mb-5 rounded-lg h-3/5 grid content-center justify-center">
                   <img class="w-9/12 mx-auto" src="images/prod3.png" alt="">
                 </div>
@@ -99,7 +99,7 @@
           <div>
             <h3 class="text-2xl lg:text-4xl font-semibold text-gray-900 pt-14 pb-8">Sportswear</h3>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-              <div id="prod4" class="bg-white p-5 pb-10 rounded-lg">
+              <div id="prod4" class="hover:shadow bg-white p-5 pb-10 rounded-lg cursor-pointer">
                 <div class="bg-secondery-bg mb-5 rounded-lg h-3/5 grid content-center justify-center">
                   <img class="w-9/12 mx-auto" src="images/prod4.png" alt="">
                 </div>
@@ -113,7 +113,7 @@
                 <h6 id="name4" class="text-xl font-semibold text-center text-gray-900 py-2">Sports Back Cap</h6>
                 <p class="text-xl font-normal text-center text-secondery-color"><span id="quantity4">49.00</span> TK</p>
               </div>
-              <div id="prod5" class="bg-white p-5 pb-10 rounded-lg">
+              <div id="prod5" class="hover:shadow bg-white p-5 pb-10 rounded-lg cursor-pointer">
                 <div class="bg-secondery-bg mb-5 rounded-lg h-3/5 grid content-center justify-center">
                   <img class="w-9/12 mx-auto" src="images/prod5.png" alt="">
                 </div>
@@ -127,7 +127,7 @@
                 <h6 id="name5" class="text-xl font-semibold text-center text-gray-900 py-2">Full Jersey Set</h6>
                 <p class="text-xl font-normal text-center text-secondery-color"><span id="quantity5">69.00</span> TK</p>
               </div>
-              <div id="prod6" class="bg-white p-5 pb-10 rounded-lg">
+              <div id="prod6" class="hover:shadow bg-white p-5 pb-10 rounded-lg cursor-pointer">
                 <div class="bg-secondery-bg mb-5 rounded-lg h-3/5 grid content-center justify-center">
                   <img class="w-9/12 mx-auto" src="images/prod6.png" alt="">
                 </div>
@@ -146,7 +146,7 @@
           <div>
             <h3 class="text-2xl lg:text-4xl font-semibold text-gray-900 pt-14 pb-8">Furniture</h3>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-              <div id="prod7" class="bg-white p-5 pb-10 rounded-lg">
+              <div id="prod7" class="hover:shadow bg-white p-5 pb-10 rounded-lg cursor-pointer">
                 <div class="bg-secondery-bg mb-5 rounded-lg h-3/5 grid content-center justify-center">
                   <img class="w-9/12 mx-auto" src="images/prod7.png" alt="">
                 </div>
@@ -160,7 +160,7 @@
                 <h6 id="name7" class="text-xl font-semibold text-center text-gray-900 py-2">Sports Back Cap</h6>
                 <p class="text-xl font-normal text-center text-secondery-color"><span id="quantity7">185.00</span> TK</p>
               </div>
-              <div id="prod8" class="bg-white p-5 pb-10 rounded-lg">
+              <div id="prod8" class="hover:shadow bg-white p-5 pb-10 rounded-lg cursor-pointer">
                 <div class="bg-secondery-bg mb-5 rounded-lg h-3/5 grid content-center justify-center">
                   <img class="w-9/12 mx-auto" src="images/prod8.png" alt="">
                 </div>
@@ -174,7 +174,7 @@
                 <h6 id="name8" class="text-xl font-semibold text-center text-gray-900 py-2">Children play</h6>
                 <p class="text-xl font-normal text-center text-secondery-color"><span id="quantity8">299.00</span> TK</p>
               </div>
-              <div id="prod9" class="bg-white p-5 pb-10 rounded-lg">
+              <div id="prod9" class="hover:shadow bg-white p-5 pb-10 rounded-lg cursor-pointer">
                 <div class="bg-secondery-bg mb-5 rounded-lg h-3/5 grid content-center justify-center">
                   <img class="w-9/12 mx-auto" src="images/prod9.png" alt="">
                 </div>
@@ -196,7 +196,7 @@
             <h4 class="text-xl xl:text-2xl font-medium text-gray-900 mb-4">Have coupon?</h4>
             <div class="form-control w-full">
               <label class="input-group h-16 w-full">
-                <input id="remove-outline" type="text" value="" placeholder="Coupon code" class="input input-bordered h-3/4 md:min-h-full px-2 lg:px-4 bg-transparent text-xs lg:text-base xl:text-xl font-normal text-secondery-color w-full" />
+                <input id="remove-outline" type="text" value="" placeholder="Coupon code" class="focus:outline-none input input-bordered h-3/4 md:min-h-full px-2 lg:px-4 bg-transparent text-xs lg:text-base xl:text-xl font-normal text-secondery-color w-full" />
                 <button disabled id="apply-btn" class="px-2 lg:px-4 xl:px-6 h-3/4 md:min-h-full bg-secondery-color text-xs lg:text-base xl:text-xl font-medium text-white">Apply</button>
               </label>
             </div>
@@ -221,6 +221,19 @@
         </aside>
       </div>
     </main>
+
+
+    <!-- popup -->
+    <section class="popup-1" id="popup-1">
+      <div class="overlay w-[100vw] h-[130vw] md:h-[110vw] lg:h-[100vw] bg-[#00000070] z-30 fixed top-0 left-0">
+        <div class="content rounded-lg bg-white z-50 text-center p-5 box-border absolute left-1/2 top-[40%] md:top-1/3 lg:top-1/4">
+          <img class="w-[30%] mx-auto pb-8" src="images/congo.png" alt="">
+          <h1 class="text-4xl font-extrabold text-gray-900">Congratulations</h1>
+          <p class="text-secondery-color text-center text-base font-medium w-[350px] md:w-[415px] mx-auto leading-7 pt-4 pb-7">Your Purchase the product</p>
+          <button class="close-btn btn bg-primary-bg bg-primary-color border-0 text-white px-8 text-lg font-medium mb-2 hover:bg-secondery-color" onclick="window.location.href = 'index.html'">Go Home</button>
+        </div>
+      </div>
+    </section>
 
     <script src="script/script.js"></script>
 </body>
